k8s/frontend-deployment.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: face-recogn
spec:
  selector:
    app: frontend
  ports:
    - protocol: "TCP"
      port: 5080
      # targetPort: 5080
      nodePort: 31000
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: face-recogn
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: dtomart/face-recognition-frontend:1.0
        ports:
        - containerPort: 5080
          protocol: TCP
        imagePullPolicy: Always


# kubectl expose deployment frontend-deployment --type=NodePort --port=5080
