k8s/webapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  # namespace: face-recogn
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
  - name: web
    protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  # namespace: face-recogn
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      volumes:
        - name: model-pv-storage
          persistentVolumeClaim:
            claimName: model-pv-claim
      containers:
      - name: webapp
        image: dtomart/face-recognition-app:1.2
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
          - mountPath: "/home/admin/projects/face-recogn/Model"
            name: model-pv-storage
